<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_main"
    tools:context=".ShowWeather">

    <ImageView
        android:id="@+id/button_view_go_back"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/go_back_button_text"
        android:onClick="goBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/details_heading"
        style="@style/app_heading_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/details_view_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_details_city_name"
        style="@style/app_heading_style"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="160dp"
        android:text="@string/details_view_default_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_weather_desc"
        style="@style/weather_text_style"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:maxLines="2"
        android:text="@string/text_view_weather_desc_default"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_weather_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_view_weather_icon"
        app:layout_constraintTop_toTopOf="@+id/image_view_weather_icon" />

    <TextView
        android:id="@+id/text_view_weather_temp"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_weather_temp_default"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_details_city_name"
        app:layout_constraintStart_toStartOf="@+id/text_view_details_city_name"
        app:layout_constraintTop_toBottomOf="@+id/text_view_details_city_name" />

    <ImageView
        android:id="@+id/image_view_weather_icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/weather_icon_desc"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_weather_temp"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_downloading_24" />

    <TextView
        android:id="@+id/text_view_weather_coord"
        style="@style/weather_text_placeholder_style"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_view_weather_cords_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_weather_icon" />

    <TextView
        android:id="@+id/text_view_weather_temps"
        style="@style/weather_text_placeholder_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_weather_coord"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        style="@style/weather_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/details_view_sunrise_heading"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        style="@style/weather_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/details_view_sunset_heading"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/text_view_weather_sunrise"
        style="@style/weather_text_placeholder_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_view_sunset_loading"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_weather_sunset"
        app:layout_constraintEnd_toStartOf="@+id/text_view_weather_sunset"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_weather_sunset"
        style="@style/weather_text_placeholder_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/details_view_sunset_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_view_pin_location"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:onClick="pinLocation"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toEndOf="@+id/button_view_go_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_push_pin_24" />
</androidx.constraintlayout.widget.ConstraintLayout>